--- a/1.md
+++ b/1.md
@@ -1,6 +1,10 @@
 # Измерения и шкалы данных
 
-> В практической деятельности необходимо проводить измерения или классификацию различных величин, характеризующих свойства объектов, явлений и процессов. Некоторые свойства проявляются только качественно, другие – количественно. В связи с понятием измерения переменной появляется понятие шкалы измерений.
+## Измерения 
+
+В практической деятельности необходимо проводить измерения или классификацию различных величин, характеризующих свойства объектов, явлений и процессов. Некоторые свойства проявляются только качественно, другие – количественно. В связи с понятием измерения переменной появляется понятие шкалы измерений.
+
+## Шкалы данных 
 
 **Шкала измерений** – это числовой или символьный ряд значений, отражающий допустимые вариации значений измеряемой величины.
 
@@ -10,9 +14,72 @@
 - интервальная
 - относительная
 
-**TODO:** продолжить
+### Номинальная шкала
 
-<br/><hr/>
+**Номинальная шкала** - шкала, которая состоит из названий, имен или категорий и предназначена для классификации объектов или явлений по некоторому признаку.
+
+*Примеры переменных: вид животного, семейное положение, профессия, ученая степень и др.*
+
+**Дихотомическя номинальная шкала** - частный случай номинальной шкалы, в котором переменная принимает только два возможных значения.
+
+*Примеры переменных: пол (мужской/женский), результат медицинского обследования (болен/здоров), семейное положение (холост/женат) и др.*
+
+<details>
+  <summary>Агрегирование номинальных данных</summary>
+  
+  > Поскольку номинальные данные характеризуются только принадлежностью к тому или иному классу объектов, то в них отсутствует понятия нуля, единицы измерения и возможность сравнивать объекты на предмет упорядоченности. Тем не менее, можно подсчитать количество различных номинальных значений, выявить класс с наибольшим числом объектов, можно определить процентное соотношение количества объектов одного класса по отношению к общему количеству, который принято называть, однако нельзя вычислить среднее значение. Например, можно говорить о том, сколько специалистов выпустил университет: программистов, математиков, физиков, химиков, геологов, филологов, но нельзя подсчитать кого в среднем выпускает университет.
+
+</details>
+<br>
+
+### Порядковая шкала
+
+**Порядковая шкала** - шкала, в которой числа или упорядоченный набор текстовых характеристик присваивается объектам так, чтобы обозначить относительные качественные позиции объектов. 
+
+Это, с одной стороны, дает возможность классифицировать объекты, а с другой – сравнивать между собой качественные характеристики объектов. <u>Измерения в порядковой шкале содержат информацию только о порядке следования величин, но не позволяют сказать "насколько одна величина больше другой", или "насколько она меньше другой"</u>.
+
+*Примером порядковой шкалы является хорошо известная классификация отелей. Вы наверняка догадываетесь, что гостиница класса «четыре звезды» по качеству лучше, чем гостиница «три звезды», однако во сколько раз она лучше сказать невозможно.*
+
+<details>
+  <summary>Агрегирование порядковых данных</summary>
+  
+  > В порядковой шкале можно уже использовать некоторые базовые статистические инструменты. Например, можно оценить моду, для того, чтобы понять, туристы какого веса чаще встречаются в выборке. Можно так же рассчитать ранговый коэффициент корреляции, который может показать, есть ли статистическая линейная связь между весом туристов и их настроением. Расчёт средней величины (а также медианы и стандартного отклонения) в порядковой шкале возможен, но в этом случае получаемое значение будет просто добавлять в нашу шкалу новые значения, но не более того. Например, если в шкале оценок за экзамены появилась «4.5» (как средняя между «4» и «5»), то это значение просто расширяет нашу шкалу, которая теперь будет содержать: «2», «3», «4», «4.5» и «5». Расстояние между «4» и «4.5», а также «4.5» и «5» всё так же невозможно адекватно измерить.
+
+</details>
+<br>
+
+### Интервальная шкала
+
+**Интервальная шкала** - шкала, которая состоит из одинаковых интервалов, имеет единицу измерения и произвольно выбранное начало – условную нулевую точку.
+
+Интервальная шкала обладает всеми свойствами номинальной и порядковой шкал, но при этом дает возможность указать количественное значение измеряемого признака. Это позволяет находить разницу в заданных единицах измерения между двумя значениями. Недостатком служит отсутствие абсолютного нуля в качестве точки отсчета.
+
+*Пример шкалы интервалов – летоисчисление по различным календарям, в которых за начало отсчета принято считать сотворение мира (которое тоже трактуется по-разному), рождество Христово, основание Рима и другие варианты.
+Еще один пример шкалы интервалов – температурные шкалы Цельсия и Фаренгейта.*
+
+<details>
+  <summary>Агрегирование интервальных данных</summary>
+  
+  > Со значениями интервальной шкалы можно проводить математические и статистические операции: складывать, вычитать, умножать и т.п. Формально – все эти операции возможны. Однако проводить их нужно только в том случае, если у получаемого результата есть разумная интерпретация. Например, можно подсчитать среднюю температуру в июне в какой-нибудь географической точке, но нелепо считать среднюю температуру по больнице.
+
+</details>
+<br>
+
+### Относительная шкала
+
+**Относительная шкала** - шкала, которая имеет все свойства интервальной шкалы и обладает абсолютным нулем в качестве точки отсчета.
+
+*Примерами номинальных шкал могут служить переменные: рост, вес, возраст, стоимость и др.*
+
+<details>
+  <summary>Агрегирование относительных данных</summary>
+  
+  > Для данных этой шкалы осмысленными являются все математические и статистические операции, включая деление. Например, цена товара измеряется в относительной шкале в рублях или другой валюте. Можно сравнивать цены на товары и говорить, что один из них в три раза дороже другого. Цена товара в 0 рублей означает, что товар бесплатный.
+
+</details>
+<br/>
+
+<hr/>
 
 Источники:
 - [Глава 1 Введение в анализ данных](https://e.sfu-kras.ru/pluginfile.php/1740962/mod_resource/content/6/Глава%201%20Введение%20в%20анализ%20данных%20Лекция.pdf)
