fix detials tag for github markdown

--- a/1.md
+++ b/1.md
@@ -25,7 +25,7 @@
 *Примеры переменных: пол (мужской/женский), результат медицинского обследования (болен/здоров), семейное положение (холост/женат) и др.*
 
 <details>
-  <summary>Агрегирование номинальных данных</summary>
+  <summary>> Агрегирование номинальных данных</summary>
   
   > Поскольку номинальные данные характеризуются только принадлежностью к тому или иному классу объектов, то в них отсутствует понятия нуля, единицы измерения и возможность сравнивать объекты на предмет упорядоченности. Тем не менее, можно подсчитать количество различных номинальных значений, выявить класс с наибольшим числом объектов, можно определить процентное соотношение количества объектов одного класса по отношению к общему количеству, который принято называть, однако нельзя вычислить среднее значение. Например, можно говорить о том, сколько специалистов выпустил университет: программистов, математиков, физиков, химиков, геологов, филологов, но нельзя подсчитать кого в среднем выпускает университет.
 
@@ -41,7 +41,7 @@
 *Примером порядковой шкалы является хорошо известная классификация отелей. Вы наверняка догадываетесь, что гостиница класса «четыре звезды» по качеству лучше, чем гостиница «три звезды», однако во сколько раз она лучше сказать невозможно.*
 
 <details>
-  <summary>Агрегирование порядковых данных</summary>
+  <summary>> Агрегирование порядковых данных</summary>
   
   > В порядковой шкале можно уже использовать некоторые базовые статистические инструменты. Например, можно оценить моду, для того, чтобы понять, туристы какого веса чаще встречаются в выборке. Можно так же рассчитать ранговый коэффициент корреляции, который может показать, есть ли статистическая линейная связь между весом туристов и их настроением. Расчёт средней величины (а также медианы и стандартного отклонения) в порядковой шкале возможен, но в этом случае получаемое значение будет просто добавлять в нашу шкалу новые значения, но не более того. Например, если в шкале оценок за экзамены появилась «4.5» (как средняя между «4» и «5»), то это значение просто расширяет нашу шкалу, которая теперь будет содержать: «2», «3», «4», «4.5» и «5». Расстояние между «4» и «4.5», а также «4.5» и «5» всё так же невозможно адекватно измерить.
 
@@ -58,7 +58,7 @@
 Еще один пример шкалы интервалов – температурные шкалы Цельсия и Фаренгейта.*
 
 <details>
-  <summary>Агрегирование интервальных данных</summary>
+  <summary>> Агрегирование интервальных данных</summary>
   
   > Со значениями интервальной шкалы можно проводить математические и статистические операции: складывать, вычитать, умножать и т.п. Формально – все эти операции возможны. Однако проводить их нужно только в том случае, если у получаемого результата есть разумная интерпретация. Например, можно подсчитать среднюю температуру в июне в какой-нибудь географической точке, но нелепо считать среднюю температуру по больнице.
 
@@ -72,7 +72,7 @@
 *Примерами номинальных шкал могут служить переменные: рост, вес, возраст, стоимость и др.*
 
 <details>
-  <summary>Агрегирование относительных данных</summary>
+  <summary>> Агрегирование относительных данных</summary>
   
   > Для данных этой шкалы осмысленными являются все математические и статистические операции, включая деление. Например, цена товара измеряется в относительной шкале в рублях или другой валюте. Можно сравнивать цены на товары и говорить, что один из них в три раза дороже другого. Цена товара в 0 рублей означает, что товар бесплатный.
 
